Fix mobile navbar overlap and sizes

--- a/app/globals.css
+++ b/app/globals.css
@@ -287,3 +287,16 @@
     transform: none !important;
   }
 }
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+}
